configure db for deployment

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,12 @@
-spring.datasource.url=jdbc:h2:file:C:/Users/adria/Documents/Dev/Projets/Java/gestion-employes/data/testdb
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.url=jdbc:postgresql://dpg-ct165pd2ng1s73e4dncg-a:5432/managerstaffdb
+spring.datasource.username=managerstaffdb_user
+spring.datasource.password=FApQQfUOBRWzFNLp3g4LpdsFP9koNSOB
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
-
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=update
 
 server.error.whitelabel.enabled=false
 logging.level.root=INFO
