--- a/pom.xml
+++ b/pom.xml
@@ -15,22 +15,6 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>gestion-employes</name>
     <description>Demo project for Spring Boot</description>
-    <url/>
-    
-    <licenses>
-        <license/>
-    </licenses>
-    
-    <developers>
-        <developer/>
-    </developers>
-    
-    <scm>
-        <connection/>
-        <developerConnection/>
-        <tag/>
-        <url/>
-    </scm>
     
     <properties>
         <java.version>21</java.version>
@@ -88,6 +72,12 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
+        <!-- Dépendance pour PostgreSQL -->
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
         </dependency>
 
         <!-- Dépendance javax.servlet-api -->
