--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,17 @@
-spring.datasource.url=jdbc:postgresql://dpg-ct165pd2ng1s73e4dncg-a:5432/managerstaffdb
+spring.datasource.url=jdbc:postgresql://dpg-ct165pd2ng1s73e4dncg-a.frankfurt-postgres.render.com:5432/managerstaffdb
 spring.datasource.username=managerstaffdb_user
 spring.datasource.password=FApQQfUOBRWzFNLp3g4LpdsFP9koNSOB
 spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Hibernate
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
+# Autres configurations
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
-server.error.whitelabel.enabled=false
+# Configuration du logging
 logging.level.root=INFO
 logging.level.org.springframework.web=DEBUG
 logging.level.org.springframework.security=DEBUG
